# lvgl-music-player

./: .gitignore  CMakeLists.txt  lv_conf.h  main.c  p  play  playwav  playwav.c  playwav1  run
data/: data.json  main.c
portaudio/: CMakeCache.txt  Makefile  PortAudioTargets.cmake  cmake_install.cmake  cmake_uninstall.cmake  portaudio-2.0.pc
sndfile/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  SndFileTargets.cmake  aiff_rw_test  alaw_test  channel_test  checksum_test  chunk_test  cmake_install.cmake  command_test  compression_size_test  cpp_test  dwvw_test  error_test  external_libs_test  floating_point_test  format_check_test  g72x_test  generate  header_test  headerless_test  list_formats  locale_test  long_read_write_test  lossy_comp_test  make_sine  misc_test  mpeg_test  multi_file_test  ogg_opus_test  ogg_test  pcm_test  peak_chunk_test  pipe_test  raw_test  rdwr_test  (+22 more)
sndfile/lvgl/: cmake_install.cmake
sndfile/src/: config.h
sndfile/tests/: stdin_test  stdout_test
